<resources>
    <string name="app_name">뉴트럴 파스처</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_camera">촬영 하기</string>
    <string name="text_anchor">위치 설정</string>
    <string name="text_motion">동작 설명</string>
    <string name="title_activity_model_main">ModelMainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_activity_onboarding">OnboardingActivity</string>
    <string name="make_your_posture_neutral">Make your POSTURE neutral</string>
    <string name="tap_to_slide">탭하여 넘기세요</string>
    <string name="posture_estimation">자세 분석하기</string>
    <string name="exercise_to_correct">교정 운동하기</string>
    <string name="good_posture_anim1">좋은 자세</string>
    <string name="good_posture_anim2">란 무엇이고,</string>
    <string name="good_posture_anim3">나쁜 자세</string>
    <string name="good_posture_anim4">란 무엇일까요?</string>
    <string name="next_button"><![CDATA[>>]]></string>
    <string name="prev_button"><![CDATA[<<]]></string>
    <string name="recycler_view_script">위의 화면을 좌우로 슬라이드하여,\n대표적인 나쁜 자세들을 살펴보세요.</string>
    <string name="capture_button"><![CDATA[<촬영 하기>]]></string>
    <string name="compare_postures">자세를 비교해보세요!</string>
    <string name="retry_button"><![CDATA[<다시 찍기>]]></string>
    <string name="home_button"><![CDATA[<첫 화면으로>]]></string>
    <string name="prev_menu">이전 메뉴</string>
    <string name="learn_posture_estimation">자세 분석 배우기</string>
    <string name="capture_posture">자세 사진찍기</string>
    <string name="correct_neck">목 교정</string>
    <string name="correct_spine">척추 교정</string>
    <string name="correct_pelvis">골반 교정</string>
    <string name="threedimen">3D</string>
    <string name="ar">AR</string>
    <string name="place_model">배치하기</string>
    <string name="size_up">크게</string>
    <string name="size_down">작게</string>
    <string name="rotate_model">회전하기</string>
    <string name="record_button">녹화하기</string>
    <string name="prev_menu_button">이전 메뉴</string>
    <string name="time_second">:00</string>
    <string name="time_minute">00</string>
    <string name="start_button"><![CDATA[<시작하기>]]></string>
    <string name="see_posture"><![CDATA[<자세 살펴보기>]]></string>
    <string name="try_capture_posture"><![CDATA[<자세 촬영해보기>]]></string>
    <string name="cursor_on">커서ON</string>
    <string name="other_exercise"><![CDATA[<다른 운동>]]></string>

</resources>