<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:background="@android:color/transparent"
    tools:context=".exercise.ArAnchorFragment">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/record_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:outlineProvider="none"
            android:backgroundTint="@color/red"
            app:rippleColor="@color/translucent_white"
            android:visibility="visible"
            app:layout_constraintVertical_bias="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <Button
            android:id="@+id/stop_button"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/red"
            android:visibility="gone"

            app:layout_constraintVertical_bias="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>


        <TextView
            android:id="@+id/text_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/record_button"
            android:textSize="13sp"

            app:layout_constraintVertical_bias="0.64"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageButton
            android:id="@+id/prev_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/button_back_24"
            android:outlineProvider="none"
            android:backgroundTint="@android:color/transparent"
            app:rippleColor="@color/translucent"

            android:scaleX="3.5"
            android:scaleY="3.5"
            app:layout_constraintVertical_bias="0.3"
            app:layout_constraintHorizontal_bias="0.82"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/text_prev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/prev_menu_button"
            android:textSize="13sp"

            app:layout_constraintStart_toEndOf="@id/text_record"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/text_record"/>
        
        <TextView
            android:id="@+id/time_minute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_minute"
            android:textSize="30sp"
            android:visibility="invisible"

            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toStartOf="@+id/time_second"
            app:layout_constraintTop_toTopOf="@+id/stop_button"
            app:layout_constraintBottom_toBottomOf="@+id/stop_button"/>

        <TextView
            android:id="@+id/time_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_second"
            android:textSize="30sp"
            android:visibility="invisible"

            android:layout_marginTop="10dp"
            app:layout_constraintHorizontal_bias="0.7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/stop_button"
            app:layout_constraintTop_toTopOf="@+id/stop_button"
            app:layout_constraintBottom_toBottomOf="@+id/stop_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>