<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="50dp"
    android:background="@color/translucent"
    tools:context=".exercise.ArAnchorFragment">

        <me.tankery.lib.circularseekbar.CircularSeekBar
            android:id="@+id/rotate_bar"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_gravity="center"

            app:cs_circle_style = "round"
            app:cs_circle_stroke_width = "20dp"
            app:cs_pointer_stroke_width = "18dp"

            app:cs_lock_enabled = "false"
            app:cs_move_outside_circle = "true"
            app:cs_circle_color="@color/translucent_white"
            app:cs_circle_progress_color="@android:color/transparent"
            app:cs_disable_progress_glow="true"
            app:cs_pointer_color = "@color/translucent_black"
            app:cs_pointer_halo_color = "@color/btn_focused"
            app:cs_pointer_halo_color_ontouch = "@color/btn_focused"
            app:cs_negative_enabled="true"
            app:cs_max="360"
            app:cs_progress="180"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/rotate_model"
            android:textSize="13sp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rotate_bar"/>

                <ImageButton
                    android:id="@+id/size_down_button"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@drawable/button_sizebtn_selector"
                    android:src="@drawable/button_remove_black_24"

                    app:layout_constraintStart_toEndOf="@+id/rotate_bar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/size_down"
                    android:textSize="13sp"

                    app:layout_constraintStart_toEndOf="@+id/rotate_bar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/size_down_button"/>

        <ImageButton
            android:id="@+id/size_up_button"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@drawable/button_sizebtn_selector"
            android:src="@drawable/button_add_black_24"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/rotate_bar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/size_up"
            android:textSize="13sp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/rotate_bar"
            app:layout_constraintTop_toBottomOf="@+id/size_up_button"/>

        <ImageButton
            android:id="@+id/anchor_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/button_anchorbtn_selector"

            app:layout_constraintVertical_bias="0.42"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/place_model"
            android:textSize="13sp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/anchor_button"/>

        <ImageButton
            android:id="@+id/close_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_close_bg"
            android:src="@drawable/button_close_24"
            android:layout_marginEnd="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/cursor_button"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:outlineProvider="none"
            android:backgroundTint="@color/button_cursor_selected"

            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/text_cursor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cursor_on"
            android:textSize="13sp"

            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toEndOf="@+id/cursor_button"
            app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>