<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include layout="@layout/common_activity_base_toolbar" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />


    <ImageButton
        android:id="@+id/prev_directory"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@color/white"
        android:scaleType="fitXY"
        android:src="@drawable/icon_posture_estimation"
        app:layout_constraintEnd_toStartOf="@+id/text_posture_capture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/text_posture_capture"
        app:layout_constraintHorizontal_bias="0.33"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font_one_pretty_night"
        android:text="@string/prev_menu"
        android:textColor="@color/black"
        android:textSize="18sp"

        app:layout_constraintHorizontal_bias="0.33"
        app:layout_constraintEnd_toStartOf="@+id/text_posture_capture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prev_directory" />

    <ImageButton
        android:id="@+id/posture_learn"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@color/white"
        android:scaleType="fitXY"
        android:src="@drawable/icon_posture_learn"
        app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/font_one_pretty_night"
        android:text="@string/learn_posture_estimation"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/posture_learn" />

    <ImageButton
        android:id="@+id/posture_capture"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@color/white"
        android:padding="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/icon_posture_capture"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_horizontal"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/text_posture_capture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/font_one_pretty_night"
        android:text="@string/capture_posture"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/posture_capture" />


</androidx.constraintlayout.widget.ConstraintLayout>