<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/root_capture_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".posture.PostureCaptureSecondFragment">

    <include
        android:id="@+id/include_toolbar"
        android:visibility="gone"
        layout="@layout/common_activity_base_toolbar"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.camera.view.PreviewView
        android:id="@+id/camera_preview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:id="@+id/capture_guideline"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/image_posture_guideline"
        android:visibility="visible"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_capture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:clickable="true"
        android:focusable="true"
        android:backgroundTint="@color/translucent_black"
        app:backgroundTint="@color/white"
        android:outlineProvider="none"
        app:borderWidth="0.5dp"

        android:layout_marginEnd="2dp"
        android:layout_marginBottom="70dp"
        android:src="@drawable/button_photo_camera_24"
        app:fabCustomSize="70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/text_capture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:text="@string/text_camera"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_capture"/>

    <ImageView
        android:id="@+id/image_self_captured"
        android:layout_width="200dp"
        android:layout_height="660dp"
        android:scaleType="centerCrop"
        android:visibility="gone"

        app:layout_constraintStart_toStartOf="@+id/guideline_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/text_box"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_pictures"
        android:layout_width="200dp"
        android:layout_height="660dp"
        android:visibility="gone"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/guideline_vertical"
        app:layout_constraintBottom_toTopOf="@id/text_box"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/text_box"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/image_blank_rect"
        android:visibility="gone"

        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_one_pretty_night"
            android:textColor="@color/black"
            android:text="@string/compare_postures"
            android:textSize="20sp"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/text_repeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_one_pretty_night"
            android:textColor="@color/black"
            android:text="@string/retry_button"
            android:textSize="20sp"

            android:layout_marginBottom="10dp"
            app:layout_constraintHorizontal_bias="0.85"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>


        <TextView
            android:id="@+id/text_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_one_pretty_night"
            android:textColor="@color/black"
            android:text="@string/home_button"
            android:textSize="20sp"

            android:layout_marginBottom="10dp"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>